# icon-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_MODE_TESTING.md  LICENSE  README.md  TESTING.md  create_test_image.rs
.github/workflows/: ci.yml
src/: contents_json.rs  icon_gen.rs  lib.rs  main.rs
tests/: dev_badge.rs  integration_test.rs  test_dev_badge.rs
