[package]
name = "icon-gen"
version = "0.2.0"
edition = "2021"
authors = ["hej <jiehecd@gmail.com>"]
description = "A cross-platform CLI tool for generating icons in various formats from a single source image"
license = "MIT"
repository = "https://github.com/Hkmu/icon-generator"
keywords = ["icon", "cli", "ico", "icns", "png", "android", "ios"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
icns = "0.3"
image = "0.24"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
css-color = "0.2"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
